--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.login-container{
+  width: 100%;
+  height: 100vh;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-main-container{
+  width: 500px;
+  height: 350px;
+  border: 2px solid red;
+  box-shadow: 0px 0px 10px ;
+}
